who needs the rest of the letters?

--- a/bigbangers.html
+++ b/bigbangers.html
@@ -18,30 +18,20 @@
                 <section class="content">
                         <ol class="rando-five">
                             <li>
-                                    <img src="">IMAGE
-                                    <h3>Title</h3>
-                                    <p>Description</p>
+                                    <img id ="image1">
+                                    <h3 class="drink-name1"></h3>
+                                    <p class="ingredients1"></p>
+                                    <p class="instructions1"></p>
                                 </li>
+
                                 <li>
-                                    <img src="">IMAGE
-                                    <h3>Title</h3>
-                                    <p>Description</p>
+                                    <img id ="image2">
+                                    <h3 class="drink-name2"></h3>
+                                    <p class="ingredients2"></p>
+                                    <p class="instructions2"></p>
                                 </li>
-                                <li>
-                                    <img src="">IMAGE
-                                    <h3>Title</h3>
-                                    <p>Description</p>
-                                </li>
-                                <li>
-                                    <img src="">IMAGE
-                                    <h3>Title</h3>
-                                    <p>Description</p>
-                                </li>
-                                <li>
-                                    <img src="">IMAGE
-                                    <h3>Title</h3>
-                                    <p>Description</p>
-                                </li>
+                  
+                               
                         </ol>
                 </section>
 
