this code is out dated

--- a/bigbangers.html
+++ b/bigbangers.html
@@ -20,9 +20,9 @@
                         <ol class="rando-five">
                             <li>
                                     <img id ="image1">
-                                    <h3 class="drink-name1"></h3>
-                                    <p class="ingredients1"></p>
-                                    <p class="instructions1"></p>
+                                    <h3 type=text class="drink-name1"></h3>
+                                    <p  type=text class="ingredients1"></p>
+                                    <p type=text class="instructions1"></p>
                                 </li>
 
                                 <li>
