--- a/user-creations.html
+++ b/user-creations.html
@@ -8,13 +8,15 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" 
+     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
   <body>
     <!--Loader-->
-    <div class="loader-hidden">Loading...
+    <div class="loader-hidden">Loading your drink...
       
     </div>
-    <div id="background">
+    <div id="cocktail-container" class="container d-flex justify-content-center">
       <div id="all-content-hider">
       <div class="title">
         <h1>Cosmic Order</h1>
@@ -27,12 +29,11 @@
       <div class="img card">
         <div>
           <div>
-            <h4 id="created-name" placeholder="The ..."></h4>
+            <h4 id="created-name" class="text-black" placeholder="The ..."></h4>
           </div>
           <div id="cocktail-picture">
-            <img src=""/>
+            <img src="" style="width:300px">
           </div>
-          <button class="btn btn-danger" id="try-again" aria-placeholder="Try Again?"></button>
         </div>
       </div>
       <div class="container">
@@ -53,17 +54,20 @@
           </div>
         </div>
       </div>
-      <div class="content">
+      <div>
         <div class="content-title">
-          <h5>Cosmic Horoscope</h5>
+          <h5>Space Facts</h5>
         </div>
         <div id="user-horo">
-          <p></p>
+          <p class="space-facts"></p>
         </div>
       </div>
-      <div>
-        <button class="btn btn-primary" id="gsBtn" aria-placeholder="Your List"></button>
-        <button class="btn btn-secondary" id="mainBtn" placeholder="Main"></button>
+      <div class="bg-black bg-gradient p-2">
+        <button class="btn btn-outline-warning" id="gsBtn" aria-placeholder="Your List">Your list</button>
+      </div>
+      <div class="bg-black bg-gradient p-2">
+      <button class="btn btn-lg btn-outline-warning" id="try-again" aria-placeholder="Try Again?">
+        Want to try Again?</button>
       </div>
     </div>
   </div>
