more styling user creations

--- a/user-creations.html
+++ b/user-creations.html
@@ -16,8 +16,8 @@
     <div class="loader-hidden">Loading your drink...
       
     </div>
-    <div id="cocktail-container" class="container d-flex justify-content-center">
-      <div id="all-content-hider">
+    <div id="cocktail-container" class="container text-center d-flex justify-content-center align-items-center">
+      <div id="all-content-hider" class="mt-5 p-5 w-75 d-flex flex-column align-items-center justify-content-center">
       <div class="title">
         <h1>Cosmic Order</h1>
       </div>
@@ -26,26 +26,26 @@
          Your Cosmic Order is up! Lets take a look your creation.
         </p>
       </div>
-      <div class="img card">
+      <div class="name-img p-3 w-50 d-flex justify-content-center text-center mb-3">
         <div>
           <div>
-            <h4 id="created-name" class="text-black" placeholder="The ..."></h4>
+            <h4 id="created-name" class="" placeholder="The ..."></h4>
           </div>
           <div id="cocktail-picture">
             <img src="" style="width:300px">
           </div>
         </div>
       </div>
-      <div class="container">
-        <div class="card">
+      <div class="container ins-rec">
+        <div class="card text-bg-dark bg-gradient bg-opacity-75 mb-3">
           <div class="card-title">
-            <h6>Cocktail History</h6>
+            <h6>Instructions</h6>
           </div>
           <div id="cocktail-info">
             <p></p>
           </div>
         </div>
-        <div class="card">
+        <div class="card text-bg-dark bg-gradient bg-opacity-75 mb-3">
           <div class="card-title">
             <h6>Recipe</h6>
           </div>
@@ -62,10 +62,10 @@
           <p class="space-facts"></p>
         </div>
       </div>
-      <div class="bg-black bg-gradient p-2">
+      <div class="bg-black bg-opacity-75 bg-gradient p-2">
         <button class="btn btn-outline-warning" id="gsBtn" aria-placeholder="Your List">Your list</button>
       </div>
-      <div class="bg-black bg-gradient p-2">
+      <div class="bg-black bg-opacity-75 bg-gradient p-2">
       <button class="btn btn-lg btn-outline-warning" id="try-again" aria-placeholder="Try Again?">
         Want to try Again?</button>
       </div>
