--- a/user-creations.html
+++ b/user-creations.html
@@ -17,7 +17,7 @@
       
     </div>
     <div id="cocktail-container" class="container text-center d-flex justify-content-center align-items-center">
-      <div id="all-content-hider" class="mt-5 p-5 w-75 d-flex flex-column align-items-center justify-content-center">
+      <div id="all-content-hider" class="mt-5 p-5 w-75 flex-column align-items-center justify-content-center">
       <div class="title">
         <h1>Cosmic Order</h1>
       </div>
