--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header class="d-flex align-items-center justify-content-around m-3">
         <nav class="navbar d-flex col-lg-3">
             <form class="form-inline">
-              <button class="btn btn-lg btn-outline-warning" type="button">Galatic Shelf</button>
-              <button class="btn btn-lg btn-outline-warning" type="button">Big Bangers</button>
+                <a class="btn btn-lg btn-outline-warning" href="./galacticshelf.html">Galatic Shelf</a>
+                <a class="btn btn-lg btn-outline-warning" href="./bigbangers.html">Big Bangers</a>
             </form>
           </nav>
         <h1 class="text-center col-lg-4">PICK YOUR ZODIAC</h1>
