--- a/user-creations.html
+++ b/user-creations.html
@@ -18,6 +18,16 @@
     </div>
     <div id="cocktail-container" class="container text-center d-flex justify-content-center align-items-center">
       <div id="all-content-hider" class="mt-5 p-5 w-75 flex-column align-items-center justify-content-center">
+        <div class="bg-black bg-opacity-75 bg-gradient p-2">
+          <button class="btn btn-outline-warning" id="gsBtn" aria-placeholder="Your List">Your list</button>
+        </div>
+        <div class="bg-black bg-opacity-75 bg-gradient p-2">
+          <button class="btn btn-outline-warning" id="gsBtn" aria-placeholder="Your List">Add Cocktail</button>
+        </div>
+        <div class="bg-black bg-opacity-75 bg-gradient p-2">
+        <button class="btn btn-lg btn-outline-warning" id="try-again" aria-placeholder="Try Again?">
+          Want to try Again?</button>
+        </div>
       <div class="title">
         <h1>Cosmic Order</h1>
       </div>
@@ -41,33 +51,26 @@
           <div class="card-title">
             <h6>Instructions</h6>
           </div>
-          <div id="cocktail-info">
+          <div id="cocktail-instructions">
             <p></p>
           </div>
         </div>
         <div class="card text-bg-dark bg-gradient bg-opacity-75 mb-3">
           <div class="card-title">
-            <h6>Recipe</h6>
+            <h6>Ingredients</h6>
           </div>
-          <div id="cocktail-recipe">
+          <div id="cocktail-ingredients">
             <p></p>
           </div>
         </div>
       </div>
       <div>
         <div class="content-title">
-          <h5>Space Facts</h5>
+          <h5>Space Fact</h5>
         </div>
-        <div id="user-horo">
+        <div class="card text-bg-dark bg-gradient bg-opacity-75 p-2">
           <p class="space-facts"></p>
         </div>
-      </div>
-      <div class="bg-black bg-opacity-75 bg-gradient p-2">
-        <button class="btn btn-outline-warning" id="gsBtn" aria-placeholder="Your List">Your list</button>
-      </div>
-      <div class="bg-black bg-opacity-75 bg-gradient p-2">
-      <button class="btn btn-lg btn-outline-warning" id="try-again" aria-placeholder="Try Again?">
-        Want to try Again?</button>
       </div>
     </div>
   </div>
