--- a/user-creations.html
+++ b/user-creations.html
@@ -17,7 +17,7 @@
       
     </div>
     <div id="cocktail-container" class="container text-center d-flex justify-content-center align-items-center">
-      <div id="all-content-hider" class="mt-5 p-5 w-75 flex-column align-items-center justify-content-center">
+      <div id="all-content-hider" class="p-5 w-75 flex-column align-items-center justify-content-center">
         <div class="bg-black bg-opacity-75 bg-gradient p-2">
           <button class="btn btn-outline-warning" id="gsBtn" aria-placeholder="Your List">Your list</button>
         </div>
