--- a/user-creations.html
+++ b/user-creations.html
@@ -17,17 +17,19 @@
       
     </div>
     <div id="cocktail-container" class="container text-center d-flex justify-content-center align-items-center">
-      <div id="all-content-hider" class="p-5 w-75 flex-column align-items-center justify-content-center">
-        <div class="bg-black bg-opacity-75 bg-gradient p-2">
-          <button class="btn btn-outline-warning" id="gsBtn" aria-placeholder="Your List">Your list</button>
+      <div id="all-content-hider" class="mt-3 w-75 flex-column align-items-center justify-content-center">
+        <div class="buttons">
+        <div>
+          <a href="./galacticshelf.html" class="btn btn-outline-warning" id="gsBtn" aria-placeholder="Your List">Your list</a>
         </div>
-        <div class="bg-black bg-opacity-75 bg-gradient p-2">
-          <button class="btn btn-outline-warning" id="gsBtn" aria-placeholder="Your List">Add Cocktail</button>
+        <div>
+          <a href="./user-creations.html" class="btn btn-lg btn-outline-warning" id="try-again" aria-placeholder="Try Again?">
+            Want to try Again?</a>
         </div>
-        <div class="bg-black bg-opacity-75 bg-gradient p-2">
-        <button class="btn btn-lg btn-outline-warning" id="try-again" aria-placeholder="Try Again?">
-          Want to try Again?</button>
+        <div>
+          <a href="./galacticshelf.html" class="btn btn-outline-warning" id="gsBtn" aria-placeholder="Add Cocktail">Add Cocktail</a>
         </div>
+       </div>
       <div class="title">
         <h1>Cosmic Order</h1>
       </div>
