added button changes

--- a/user-creations.html
+++ b/user-creations.html
@@ -28,7 +28,7 @@
             Want to try Again?</a>
         </div>
         <div>
-          <a href="./galacticshelf.html" class="btn btn-outline-warning" id="add-Btn" aria-placeholder="Add Cocktail">Add Cocktail</a>
+          <button class="btn btn-outline-warning" id="add-Btn" aria-placeholder="Add Cocktail">Add Cocktail</button>
 
         </div>
        </div>
