added script file called shelf, code to pull data is working on galactic shelf

--- a/galacticshelf.html
+++ b/galacticshelf.html
@@ -24,15 +24,13 @@
           for your selection.
         </p>
       </div>
-      <div>
-        <or id="user-cocktails"> </or>
+      <div id="storage-box">
+        
       </div>
+      
     </div>
-    <!--JQuery Script-->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <!--NASA photos script-->
-    <script src="./assets/space.js"></script>
-    <!--Cocktail Generator script-->
-    <script src="./assets/cocktail.js"></script>
+
+ 
+    <script src="./assets/shelf.js"></script>
   </body>
 </html>
