--- a/galacticshelf.html
+++ b/galacticshelf.html
@@ -14,20 +14,28 @@
     />
   </head>
   <body>
+
     <div class="container">
       <div class="title">
         <h1>Galactic Shelf</h1>
       </div>
+
       <div class="description">
         <p>
           Welcome to the Galactic Shelf, here we collect all of your creations
           for your selection.
         </p>
       </div>
-      <div id="storage-box">
-        
-      </div>
+
+    <section class="storage-box1">
+      <h2 class="stored-name"></h2>
+      <img class="stored-image" src="">
+      <p class="stored-ingredients"></p>
+      <p class="stored-recipe"></p>
+    </section>
+
       
+
     </div>
 
  
