--- a/galacticshelf.html
+++ b/galacticshelf.html
@@ -5,40 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galactic Shelf</title>
-    <link rel="stylesheet" type="text/css" href="./assets/style.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/galacticshelf.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"  
       href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
+    <div class="home-btn container text-center d-flex justify-content-center align-items-center">
+      <a href="./index.html" class="btn btn-lg btn-outline-warning" id="home" >
+        Main Page</a>
+    </div>
 
-    <div class="container">
-      <div class="title">
+    <div class="container p-3 justify-content-center text-center">
+      <div class="title ">
         <h1>Galactic Shelf</h1>
       </div>
 
-      <div class="description">
+      <div class="description p-3">
         <p>
           Welcome to the Galactic Shelf, here we collect all of your creations
           for your selection.
         </p>
-      </div>
+      </div >
 
-    <section class="storage-box1">
-      <h2 class="stored-name"></h2>
-      <img class="stored-image" src="">
-      <p class="stored-ingredients"></p>
-      <p class="stored-recipe"></p>
+    <section class="d-flex flex-column align-items-center justify-content-center ">
+      <h2 class="col-6 stored-name text-bg-dark bg-gradient bg-opacity-75 mb-3" ></h2>
+      <img class="stored-image text-bg-dark bg-gradient bg-opacity-75 mb-3" src="">
+      <p class="col-6 stored-ingredients text-bg-dark bg-gradient bg-opacity-75 mb-3"></p>
+      <p class="col-6 stored-recipe text-bg-dark bg-gradient bg-opacity-75 mb-3"></p>
     </section>
 
       
 
     </div>
-
- 
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="./assets/space.js"></script>
     <script src="./assets/shelf.js"></script>
   </body>
 </html>
