changed size of picture and margin on the home button

--- a/galacticshelf.html
+++ b/galacticshelf.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body>
-    <div class="home-btn container text-center d-flex justify-content-center align-items-center">
+    <div class="home-btn container text-center d-flex justify-content-center align-items-center mt-5">
       <a href="./index.html" class="btn btn-lg btn-outline-warning" id="home" >
         Main Page</a>
     </div>
@@ -34,7 +34,7 @@
 
     <section class="d-flex flex-column align-items-center justify-content-center ">
       <h2 class="col-6 stored-name text-bg-dark bg-gradient bg-opacity-75 mb-3" ></h2>
-      <img class="stored-image text-bg-dark bg-gradient bg-opacity-75 mb-3" src="">
+      <img class="stored-image text-bg-dark bg-gradient bg-opacity-75 mb-3" style="width:300px" src="">
       <p class="col-6 stored-ingredients text-bg-dark bg-gradient bg-opacity-75 mb-3"></p>
       <p class="col-6 stored-recipe text-bg-dark bg-gradient bg-opacity-75 mb-3"></p>
     </section>
