--- a/galacticshelf.html
+++ b/galacticshelf.html
@@ -17,7 +17,7 @@
   <body>
     <div class="home-btn container text-center d-flex justify-content-center align-items-center mt-5">
       <a href="./index.html" class="btn btn-lg btn-outline-warning" id="home" >
-        Main Page</a>
+        Pick Your Zodiac</a>
     </div>
 
     <div class="container p-3 justify-content-center text-center">
