--- a/user-creations.html
+++ b/user-creations.html
@@ -16,7 +16,7 @@
     <div class="loader-hidden">Loading your drink...
       <img id="rocketGif" src="assets\images\rocket.gif">
     </div>
-    <div id="cocktail-container" class="container text-center d-flex justify-content-center align-items-center">
+    <div id="cocktail-container" class="col-sm-12 col-md-10 container text-center d-flex justify-content-center align-items-center">
 
       <div id="all-content-hider" class="mt-3 w-75 flex-column align-items-center justify-content-center">
         <div class="buttons">
@@ -40,7 +40,7 @@
          Your Cosmic Order is up! Lets take a look your creation.
         </p>
       </div>
-      <div class="name-img p-3 w-50 d-flex justify-content-center text-center mb-3">
+      <div class="name-img p-3 d-flex justify-content-center text-center mb-3">
         <div>
           <div>
             <h4 id="created-name" class="" placeholder="The ..."></h4>
